--- a/src/app/components/categoria-filtrada/categoria-filtrada.component.html
+++ b/src/app/components/categoria-filtrada/categoria-filtrada.component.html
@@ -186,12 +186,12 @@
             <tr>
               <td class="col-sm-6">
 
-                <select class="form-control" style="width: 75%;" >
+                <select class="form-control" style="width: 75%;" #selectCantidad>
                 <option *ngFor="let stock of producto.STOCK" [value]="stock.codigo">{{stock.nombre}}</option>
               </select>
               </td>
               <td class="col-sm-6">
-                <p style="text-align:right; margin-bottom: 3px;" class="precio"><b>$ {{producto.TOTAL}}</b></p>
+                <p style="text-align:right; margin-bottom: 3px;" class="precio"><b>$ {{producto.PRECIO_FINAL}}</b></p>
                 <!--p style="text-align:right; font-size: 12px;">Ahorro $60,000</p-->
               </td>
             </tr>
@@ -205,22 +205,22 @@
                 <p class="total">Total</p>
               </td>
               <td style="text-align:right;" class="col-sm-6">
-                <h3 class="precio"><b>$ {{producto.TOTAL}}</b></h3>
+                <h3 class="precio"><b>$ {{producto.PRECIO_FINAL}}</b></h3>
 
               </td>
             </tr>
             <tr style="text-align:right; ">
-              <td><button type="submit" class="btn btn-default bremsen ">Comprar</button></td>
-              <td><button type="submit" class="btn btn-primary bremsen3 "><i class="fa fa-plus" aria-hidden="true"></i> Carro</button></td>
+              <td><button type="submit" class="btn btn-default bremsen " routerLink="/producto/{{producto.ID}}">Comprar</button></td>
+              <td><button type="submit" class="btn btn-primary bremsen3 " (click)="agregarCarro(2,selectCantidad.value,producto.ID)"><i class="fa fa-plus" aria-hidden="true"></i> Carro</button></td>
             </tr>
           </table>
-
+           <div *ngIf="errorMessage" class="help-block">{{errorMessage}}</div>
       </div>
-      <div class="collapse" id="carro" style="text-align: left !important;" aria-expanded="true">
+      <div  id="carro" style="text-align: left !important;">
                       <div class="well">
                         <br>
                         <div class="col-md-12 text-right">
-                          <h3>Sumando al carro</h3>
+                         <h3>Sumado al carro</h3>
                           <hr>
                         </div>
 
@@ -229,17 +229,14 @@
                         </div>
 
                         <div class="col-md-3 col-sm-12">
-                            <h4>Marca modelo</h4>
+                            {{producto.MARCA}} {{producto.MODELO}}
                               <ul class="lista-producto">
-                                <li>Medida: 24 145 7h</li>
-                                <li>SKU: 653fg54</li>
-                                <li>Cantidad: 4</li>
+                                <li>Medida: {{producto.MEDIDA}}</li>
+                                <li>Instalación gratis: {{producto.INCLUYE_INSTALACION}}</li>
+                                <li>Despacho gratis: {{producto.DESPACHO}}</li>
+                                <li>Cantidad: {{selectCantidad.value}}</li>
 
                             </ul>
-                        </div>
-                        <div class="col-md-6 col-sm-12">
-                            <button type="button" class="btn btn-default ">Seguir comprando </button>
-                             <button type="button" class="btn btn-default ">Seguir comprando </button>
                         </div>
 
                       </div>
