--- a/src/assets/css/stylesheet.css
+++ b/src/assets/css/stylesheet.css
@@ -74,7 +74,7 @@ legend {
 	font-size: 18px;
 	padding: 7px 0px
 }
-label { font-weight:normal; font-family:'Lato', sans-serif; font-size: 14px !important; }
+label { font-weight:bold; font-family:'Lato', sans-serif; font-size: 14px !important; }
 form {
 	padding:0;
 	margin:0;
@@ -94,35 +94,10 @@ a:focus { outline:none; }
 /**===== Title =====**/
 .title { margin:0px 0px 20px 0px; }
 
-.padBottom { padding-bottom: 24px; border-bottom: 2px solid #F2F2F2; }
-
-
-h1 { 
-	font-size: 36px !important;
-	text-transform: uppercase !important;
-	color: #4a4a4a !important;
-	font-weight: lighter !important;
-}
-
-h2 { 
-	font-weight: bold !important;
-	font-size: 24px !important;
-	color: #4a4a4a !important;
-}
-
-h2.bolder { font-size: 36px !important; }
-
-h3 { 
-	color: #4a4a4a !important;
-}
-h4 { font-size: 16px !important; font-weight: bold !important; color: #1e1e1e; }
-
 
 h1.title { text-transform: uppercase;font-weight: bold; }
 h4.nombre-producto { font-size: 14px;}
 h2.titulo-ligh  { font-weight: lighter; font-size: 24px; }
-
-
 
 .boton-tab {
 background: #ccc !important;
@@ -421,7 +396,7 @@ background: #ccc !important;
 	background: #FFF;
 	border:3px solid #3e7cb4;
 	border-width:3px 0px 0px 0px;
-	width:330px;
+	width:420px;
 	border-radius:0px;
 	right:0;
 	left:auto;
@@ -482,7 +457,7 @@ background: #ccc !important;
 /*===================================================================================*/
 #menu .navbar-collapse {
 	padding-left:0px;
-	padding-right:15px;
+	padding-right:0px;
 }
 #menu.navbar {
 	border-radius:0px;
@@ -577,10 +552,10 @@ background: #ccc !important;
 #menu .nav > li { height:40px; }
 #menu .nav > li > a {
 	font-size:16px;
-	color: #fff;
+	color: #555;
 	line-height:40px;
 	text-decoration: none;
-	padding:0px 0px 0px 33px;
+	padding:0px 0px 0px 48px;
 	z-index: 1009;
 	-webkit-transition: all 0.3s ease-in-out;
 	-moz-transition: all 0.3s ease-in-out;
@@ -977,7 +952,7 @@ visibility:hidden;
 .product-list {
 	position:relative;
 	padding:20px 0px;
-	border-bottom: 1px solid #eae9e9;
+	border:1px solid #eae9e9;
 	margin-bottom: 20px;
 }
 
@@ -1008,29 +983,18 @@ visibility:hidden;
 	top:25px;
 	left:16px;
 }
-
-	h4.tabs-h4 { text-align: center; }
-	.blanco { background: #fff; color:#1e1e1e; }
-	p.titulosDetalles { font-size: 15px; text-transform: uppercase;  }
+	b.titulosDetalles { font-size: 16px; text-transform: uppercase;  }
 	 .p-botnes  {color: #ccc; padding-top: 8px;}
-	 .bg-bremsen {  background-image: url('../image/neumatico-porque-bremsen.jpg'); }
 	.bg-home {  background-image: url('../image/neumaticos-home.jpg'); }
-	.img-bremsen {  background-image: url('../image/img-bremsen.jpg'); height: 436px; }
 	label.aro { float: right; }
 	.buscador2  {padding: 25px 7% !important;}
 	.nav-tabs>li>a {border-radius: 0px; background:#e8e8e8; color: #c0bebf;}
 	.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {background: #c0bebf;}
-	.form-control {height: 40px; font-size: 14px; border-radius: 4px}
+	.form-control {height: 40px; font-size: 14px; border-radius: 4px !important;}
 	.form-control2 {height: 30px; font-size: 15px;}
-	.gris-oscuro { background: #4a4a4a; }
 /**** Cerrar ****/
 	.borderTop { border-bottom: 1px solid #f2f2f2;  }
-	.borderBottomActive { border-bottom: 3px solid #1e1e1e; }
-	.borderBottom {border-bottom: 3px solid #F2F2F2; font-weight: bold;  }
-	.borderBottomActive h3 { color: #1e1e1e; font-weight: bold; }
-	.borderBottom h3 {color:#F2F2F2;  }
 	.borderCaja { border:1px solid #f2f2f2; padding: 10px; }
-	.pad-5 {padding: 5px;}
 	.pad-15 {padding: 15px;}
     .pad-100 {padding-top: 100px;}
     .pad-50 {padding-top: 50px;}
@@ -1038,24 +1002,11 @@ visibility:hidden;
 	.pest-home {}
 	.formulario01 {padding-left:0px;}
 	.bloque1 { background:#333333c4 ;color:#ffffff; padding: 15px 6%; height: 408px; }
-	.bloque1 p { font-size: 16px; line-height: 27px; }
+	.bloque1 p { font-size: 21px; line-height: 27px; }
 	.bremsen { background-color:#e00034; color:#ffffff; width: 100%; text-transform: uppercase; }
 	.bremsen2 { background-color:#cc0033; color:#ffffff; text-transform: uppercase; } 
 	.bremsen3  {background-color:#383838; color:#ffffff; text-transform: uppercase;}
 	h1.nuestros-servicios  { text-transform: uppercase;  font-size: 50px; }
-
-	.volver { float: left; }
-	@media (max-width: 460px) {
-  		 .video { width: 360px; height:203px; }
-  		h4.tabs-h4 { font-size: 11px !important; }
-
-  		.noView { display: none; }
-	}
-
-
-
-
-
 
 	.table2>tbody>tr>td, .table2>tbody>tr>th, .table>tfoot>tr>td, .table2>tfoot>tr>th, .table2>thead>tr>td, .table2>thead>tr>th { 
 		border: none !important; padding: 4px 8px !important; }
@@ -1369,6 +1320,7 @@ visibility:hidden;
 /*  11. buttons
 /*===================================================================================*/
 .buttons {
+	border-top:1px solid #EEEEEE;
 	overflow: auto;
 	padding:15px 6px 0px 6px;
 	margin-bottom: 20px;
@@ -1377,7 +1329,6 @@ visibility:hidden;
 	padding:6.2px 12px;
 	border-radius: 4px !important;
 	border:0px none;
-	text-transform: uppercase;
 	border-radius:0px;
 	box-shadow:none;
 	-webkit-transition: all 0.3s ease-in-out;
@@ -1404,7 +1355,7 @@ visibility:hidden;
 	background-color: #e00034;
 }
 .btn-default:hover {
-	background:#1e1e1e;
+	background:#444;
 	color:#fff;
 }
 .btn-primary {
@@ -1412,7 +1363,7 @@ visibility:hidden;
 	color:#ffffff;
 }
 .btn-primary:hover, .btn-primary:active, .btn-primary.active, .btn-primary.disabled, .btn-primary[disabled] {
-	background:#1e1e1e;
+	background:#444;
 	color:#fff;
 }
 .btn-warning {
@@ -1487,7 +1438,7 @@ visibility:hidden;
 	color:#666;
 }
 .tab-content {
-	padding:0px 15px 10px;
+	padding:15px 15px 10px;
 	margin-bottom: 20px;
 	z-index:2;
 	border-top:0px;
@@ -1584,7 +1535,7 @@ visibility:hidden;
 }
 .product-tab .tabs li.active a {
 	opacity:1;
-	padding-bottom:9px;
+	padding-bottom:8px;
 	background: #FFFFFF;
 	border-top:2px solid #ddd;
 	border-left: 2px solid #ddd;
@@ -2126,7 +2077,7 @@ h4.panel-title { padding:0 }
     height:40px;
     text-align: center;
     width:40px; float:left;}
-.feature-box .feature-content{padding:20px; color:#4a4a4a ;}
+.feature-box .feature-content{padding-left:50px;}
 .feature-box h4{font-size:22px; margin-top:0;}
 /* Infographic */
 .infographic{position:relative; margin-top:30px;}
@@ -2239,7 +2190,7 @@ h4.panel-title { padding:0 }
 /*  23. Extra
 /*===================================================================================*/
 /* Fix some bootstrap improvment */
-.form-control,.input-group-addon { border-radius:4px; }
+.form-control,.input-group-addon { border-radius:0px; }
 .radio-inline + .radio-inline .checkbox-inline + .checkbox-inline{margin-left:10px;}
 input[type="radio"], input[type="checkbox"]{margin-top:2px;}
 .checkbox-inline input[type="checkbox"]{margin-top:3px;}
