--- a/src/app/components/categoria-no-filtrada/categoria-no-filtrada.component.html
+++ b/src/app/components/categoria-no-filtrada/categoria-no-filtrada.component.html
@@ -250,7 +250,7 @@
             </tr>
             <tr style="text-align:right; ">
               <td><button type="button" class="btn btn-default bremsen " routerLink="/producto/{{producto.ID}}">Comprar</button></td>
-              <td><button type="button" class="btn btn-primary bremsen3 " (click)="agregarCarro(2,selectCantidad.value,producto.ID)"><i class="fa fa-plus" aria-hidden="true"></i> Carro</button></td>
+              <td><button type="button" class="btn btn-primary bremsen3 " (click)="agregarCarro(2,selectCantidad.value,producto.ID)" data-toggle="modal" data-target=".bs-example-modal-sm"><i class="fa fa-plus" aria-hidden="true"></i> Carro</button></td>
             </tr>
           </table>
 
@@ -313,3 +313,15 @@
       </div>
     </div>
   </div>
+ <script>
+                        $('#myModal').on('shown.bs.modal', function () {
+                        $('#myInput').focus()
+                      })
+                    </script>
+<div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+                        <div class="modal-dialog modal-sm" role="document" >
+                          <div class="modal-content" style="padding-left: 5px;">
+                            <div class="modal-header"> <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>  </div>
+                            <h3>Producto agregado al carro</h3>                          </div>
+                        </div>
+                    </div>
