--- a/src/app/components/producto/producto.component.html
+++ b/src/app/components/producto/producto.component.html
@@ -86,11 +86,11 @@
           <table class="table2 table table-precio">
                 <tr>
               <td>
-                <button type="submit" class="btn btn-primary bremsen3" (click)="agregarCarro(1)"><i class="fa fa-plus" aria-hidden="true"></i> Carro</button>
+                <button type="submit" class="btn btn-primary bremsen3" (click)="agregarCarro(1)" data-toggle="modal" data-target=".bs-example-modal-sm"><i class="fa fa-plus"></i> Carro</button>
 
               </td>
               <td  style="text-align: right;">
-                   <button class="btn btn-default " type="button" data-target="" aria-expanded="false" (click)="agregarCarro(2)">
+                   <button class="btn btn-default " type="button" data-target="" aria-expanded="false" (click)="agregarCarro(2)"  data-toggle="modal" data-target=".bs-example-modal-sm">
                       COMPRAR
                     </button>
 
@@ -172,3 +172,15 @@
       </div>
     </div>
   </div>
+ <script>
+                        $('#myModal').on('shown.bs.modal', function () {
+                        $('#myInput').focus()
+                      })
+                    </script>
+<div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+                        <div class="modal-dialog modal-sm" role="document" >
+                          <div class="modal-content" style="padding-left: 5px;">
+                            <div class="modal-header"> <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>  </div>
+                            <h3>Producto agregado al carro</h3>                          </div>
+                        </div>
+                    </div>
